@@ -26,7 +26,7 @@ and small patches:
 
 Michael Elsdörfer (sort by multiple values test and prototype)
 Bruno Rezende
-
+Pablo Hoffman
 
 Third party code
 ----------------
